--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="طراح سایت">
+    <meta name="description" content="طراح و برنامه نویس سایت">
     <meta name="author" content="ایلیا رحیمی">
 
     <title>ایلیا رحیمی</title>
@@ -80,7 +80,7 @@
                         
                         <div class="custom-btn-group mt-4">
                           <a href="#projects" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> پروژه های من</a>
-                          <a href="#donate" class="btn custom-btn custom-btn-bg custom-btn-link"><i class="fa-brands fa-btc"></i>  حمایت مالی :) </a>
+                          <a href="#donate" class="btn custom-btn custom-btn-bg custom-btn-link">حمایت مالی :) </a>
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">ساخته شده با ❤️ توسط<a rel="nofollow" style="color:#7700ff;text-decoration:none;"href="https://iliyarh.ir">  ایلیا رحیمی </a></p>
+                        <p class="copyright-text text-center">ساخته شده با ❤️ توسط<a rel="nofollow" style="color:#7700ff;text-decoration:none;"href="https://iliyarahimi.ir">  ایلیا رحیمی </a></p>
                     </div>
                     
                </div>
