--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            }
        </script>
 
-        <div id="donate" style="display:none;">bc1q35km7kdy53ql0q6yzqdcjg5a4pp8pwauqxqhrs</div>
+        <div id="donate" style="display:none; font-size: 11.4px;">bc1q35km7kdy53ql0q6yzqdcjg5a4pp8pwauqxqhrs</div>
     
     </section>
   
